[package]
name = "tutorial-sas"
version = "0.1.0"
authors = ["apahie <apahie0918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
bcrypt = "0.8.2"
chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "uuid", "r2d2", "chrono"]}
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.8"
frank_jwt = "3.1.2"
futures = "0.3.5"
r2d2 = "0.8.9"
serde_derive="1.0.114"
serde_json="1.0"
serde="1.0"
sparkpost = "0.5.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
